--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 
 <h1>{{title}}</h1>
 
+<!-- 
+<app-heroes-list></app-heroes-list> -->
 
-<app-heroes-list></app-heroes-list>
-
+<app-dbz-main></app-dbz-main>
